// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when CSS Modules rule doesn't include postcss-loader 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "test": /\\\\\\.jsx\\?/,
              "use": Array [
                Object {
                  "loader": "babel-loader",
                },
                Object {
                  "loader": "astroturf/loader",
                  "options": Object {
                    "extension": ".astroturf.css",
                  },
                },
              ],
            },
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.astroturf\\\\\\.css\\$/,
                  "use": Array [
                    Object {
                      "loader": "style-loader",
                      "options": Object {},
                    },
                    Object {
                      "loader": "css-loader",
                      "options": Object {
                        "modules": true,
                      },
                    },
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "ident": "postcss-astroturf",
                        "plugins": Array [
                          [Function],
                        ],
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.module\\\\\\.css\\$/,
                  "use": Array [
                    Object {
                      "loader": "style-loader",
                      "options": Object {},
                    },
                    Object {
                      "loader": "css-loader",
                      "options": Object {
                        "modules": true,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.css\\$/,
                  "use": Array [
                    Object {
                      "loader": "style-loader",
                      "options": Object {},
                    },
                    Object {
                      "loader": "css-loader",
                      "options": Object {},
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`when there are no CSS rules in the configuration 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "test": /\\\\\\.astroturf\\\\\\.css\\$/,
              "use": Array [
                Object {
                  "loader": "style-loader",
                  "options": Object {},
                },
                Object {
                  "loader": "css-loader",
                  "options": Object {
                    "modules": true,
                  },
                },
                Object {
                  "loader": "postcss-loader",
                  "options": Object {
                    "ident": "postcss-astroturf",
                    "plugins": Array [
                      [Function],
                    ],
                  },
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;
